samples/_failures_safe/1761617739_2cb87e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c30ffad5.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_c30ffad5.c:183:49: error: expected ‘)’ at end of input
  183 |             printf("Vertex %d: unreachable\n", i
      |                   ~                             ^
      |                                                 )
./samples/SAFE/__tmp_c30ffad5.c:183:13: error: expected declaration or statement at end of input
  183 |             printf("Vertex %d: unreachable\n", i
      |             ^~~~~~
./samples/SAFE/__tmp_c30ffad5.c:183:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c30ffad5.c:183:13: error: expected declaration or statement at end of input
